--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -27,6 +27,10 @@
     padding: 1rem 2rem;
     background-color: var(--nav-bg);
     box-shadow: 0 2px 4px var(--nav-shadow);
+    position: fixed; /* Added */
+    top: 0; /* Added */
+    width: 100%; /* Added */
+    z-index: 1000; /* Added */
 }
 
 .nav-branding {
