--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,8 @@
             "@near-wallet-selector/core": "https://ga.jspm.io/npm:@near-wallet-selector/core@8.9.10/index.js",
             "@near-wallet-selector/here-wallet": "https://ga.jspm.io/npm:@near-wallet-selector/here-wallet@8.9.10/index.js",
             "@near-wallet-selector/modal-ui-js": "https://ga.jspm.io/npm:@near-wallet-selector/modal-ui-js@8.9.10/index.js",
-            "@near-wallet-selector/my-near-wallet": "https://ga.jspm.io/npm:@near-wallet-selector/my-near-wallet@8.9.10/index.js"
+            "@near-wallet-selector/my-near-wallet": "https://ga.jspm.io/npm:@near-wallet-selector/my-near-wallet@8.9.10/index.js",
+            "near-api-js": "https://ga.jspm.io/npm:near-api-js@2.1.4/lib/browser-index.js"
         },
         "scopes": {
             "https://ga.jspm.io/": {
