--- a/templates/dca.html
+++ b/templates/dca.html
@@ -155,6 +155,24 @@
                     <i class="fas fa-play-circle"></i> Resume DCA
                 </button>
             </div>
+            <div class="mb-3">
+                <label for="new_interval" class="dca-form-label">Update Swap Interval:</label>
+                <select class="dca-form-select mb-2" id="new_interval" required>
+                    <option value="" selected disabled>Select New Interval</option>
+                    <option value="300000000000">5 Minutes</option>
+                    <option value="900000000000">15 Minutes</option>
+                    <option value="1800000000000">30 Minutes</option>
+                    <option value="3600000000000">1 Hour</option>
+                    <option value="7200000000000">2 Hours</option>
+                    <option value="14400000000000">4 Hours</option>
+                    <option value="21600000000000">6 Hours</option>
+                    <option value="43200000000000">12 Hours</option>
+                    <option value="86400000000000">24 Hours</option>
+                </select>
+                <button onclick="changeSwapInterval()" class="dca-btn dca-btn-primary">
+                    <i class="fas fa-clock"></i> Update Interval
+                </button>
+            </div>
             <p class="text-danger">
                 <i class="fas fa-exclamation-triangle"></i>
                 Warning: Removing your DCA setup will stop all investments and withdraw all funds.
