--- a/templates/podcasts.html
+++ b/templates/podcasts.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div id="loading-spinner" class="hidden">Loading...</div>
 
-<div id="main-area">
+<div id="main-area" class="main podcast-group">
     <h1>Most Recent Podcast</h1>
     <div id="recent-podcast">
         <div class="card">
